--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -24,7 +24,7 @@ $font_pre: "Courier 10 Pitch", Courier, monospace;
 
 $portrait:480px;
 $xswidth: 600px;
-$tabwidth: 768px;
+$tabwidth: 820px;
 $midwidth: 960px;
 $deskwidth: 1200px;
 $xxl: 1300px;
